fixed Trade School Alignment

--- a/alternatives.css
+++ b/alternatives.css
@@ -133,9 +133,8 @@ a{
    width:100%; 
 }
 
-#trade-school{
-    display:flex;
-}
+
+
 .pro-img{
     width: 70%;
 }
